Add a ?count to count total values
